# deterministicGaussianSampling

./: .gitignore  CMakeLists.txt  Dockerfile.linux  Doxyfile  README.md  linux-builder.sh
.github/workflows/: build-deploy.yml  build-linux-artifacts.yml  build-windows-artifacts.yml  deploy-doxygen.yml  release.yml
doxygen/: doxygen_d2d_short.h  doxygen_d2d_short_function.h  doxygen_d2d_short_threaded.h  doxygen_gm2d_short.h  doxygen_gm2d_stddev.h  doxygen_main_page.h
lib/: CMakeLists.txt
lib/cache_manager/: floating_bucket_cache.h
lib/debug/: capture_time.cpp  capture_time.h
lib/dirac_to_dirac/: dirac_to_dirac_approx_function_i.h  dirac_to_dirac_approx_i.h  dirac_to_dirac_approx_short.cpp  dirac_to_dirac_approx_short.h  dirac_to_dirac_approx_short_function.cpp  dirac_to_dirac_approx_short_function.h  dirac_to_dirac_approx_short_thread.cpp  dirac_to_dirac_approx_short_thread.h  dirac_to_dirac_optimization_params.h
lib/dirac_to_dirac/tests/benchmark/: benchmark_D_E_cache_performance.cpp  benchmark_dirac_to_dirac_approx_short.cpp  benchmark_dirac_to_dirac_approx_short_threaded.cpp
lib/dirac_to_dirac/tests/unit_tests/: dirac_to_dirac_approx_short_function_test_van_mises_distance_sq_derivative.cpp  dirac_to_dirac_approx_short_test_van_mises_distance_sq_derivative.cpp  dirac_to_dirac_test_case_params.h  gm_to_dirac_short_test_derivative.cpp  gm_to_dirac_test_case_params.h
lib/dirac_to_dirac/wrappers/: dirac_to_dirac_approx_short_c.cpp  dirac_to_dirac_approx_short_c.h  dirac_to_dirac_approx_short_function_c.cpp  dirac_to_dirac_approx_short_function_c.h  dirac_to_dirac_approx_short_thread_c.cpp  dirac_to_dirac_approx_short_thread_c.h
lib/gm_to_dirac/: gm_to_dirac_approx_i.h  gm_to_dirac_approx_standard_normal_distribution_i.h  gm_to_dirac_optimization_params.h  gm_to_dirac_short.cpp  gm_to_dirac_short.h  gm_to_dirac_short.tpp  gm_to_dirac_short_standard_normal_deviation.cpp  gm_to_dirac_short_standard_normal_deviation.h
lib/gm_to_dirac/tests/benchmark/: benchmark_gm_to_dirac_short.cpp
lib/gm_to_dirac/tests/unit_tests/: gm_to_dirac_short_test_derivative.cpp
lib/gm_to_dirac/wrappers/: gm_to_dirac_short_c.cpp  gm_to_dirac_short_c.h  gm_to_dirac_short_standard_normal_deviation_c.cpp  gm_to_dirac_short_standard_normal_deviation_c.h
lib/gsl_integration/: gsl_quadrature_adaptive_gauss_kronrod.h
lib/gsl_minimizer/: gsl_minimizer.cpp  gsl_minimizer.h
lib/gsl_multivariative_gradient/: gradient_van_mises_distance.h  gradient_van_mises_distance_sq_const_weight.h  gradient_van_mises_distance_sq_dynamic_weight.h  gsl_multivariative_gradient_template.h
lib/gsl_types/: gsl_vector_matrix_types.h
lib/gsl_utils/: gsl_utils_allocation.h  gsl_utils_compare.h  gsl_utils_view_helper.h  gsl_utils_weight_helper.h  gtest_compare_vec.h
lib/math_utils/: math_util_defs.h  squared_euclidean_distance_utils.h
lib/math_utils/tests/benchmark/: benchmark_fma.cpp  benchmark_squared_euclidean_distance_utils.cpp
lib/math_utils/tests/unit_tests/: squared_euclidian_distance_utils_test.cpp
lib/options/: approximate_options.h
lib/options/wrappers/: approximate_options_c.cpp  approximate_options_c.h
src/: main.cpp
